# stg2veriloga

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  stgToVerilogA.py
example/: STG.g  WAIT1.g  WAIT2.g  tb.py  wait1.work  wait2.work
stg2veriloga/: stg2veriloga.py
test/: internaltest.g  internaltest.work  looptest.g  looptest.work  stg.work  stg_stim_rst.py
