[build-system]
requires=["setuptools >= 58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stg2veriloga"
version = "1.1"
authors = [{name="Rodrigo Pedroso Mendes", email="roedroso@gmail.com"}]
description = "Tool for converting stg into a verilogA code"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['argparse',
                'regex',
                'tatsu',
                'vagen']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
stg2veriloga = "stg2veriloga.stg2veriloga:cli"
